# syncify

./: .air.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  app.py  auth.go  compose.dev.yml  compose.yml  config.go  dev.Dockerfile  docker-entrypoint.sh  dockerfile  embed.go  example.env  go.mod  go.sum  main.go  makefile  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  schema.sql  style.css  stylesheet.css  sync.go  tailwind.config.js  tailwind.css
.github/workflows/: docker-publish.yml
cmd/main/: main.go
common/: db.py  spotify.py
config/: config.go
examples/: compose.yml
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/lib/: utils.ts
internal/auth/: authenticator.go  randomState.go  spotify.go
internal/config/: config.go
internal/model/: model.go
internal/routes/: auth.go  root.go  router.go  sync.go
internal/session/: manager.go
internal/sync/: sync.go
internal/views/: page.go  root.go
model/: model.go
src/: main.py
src/alembic/: __init__.py  env.py
src/common/: auth.py  conf.py  db.py  spotify.py  stripe.py
src/scheduler/: main.py  scheduler.py
src/syncify2/: main.py
src/webapp/: api_v1.py  app.py  main.py  session.py
src/worker/: main.py  worker.py
static/: global.css  stylesheet.css
templates/: index.html  login.html
views/: page.go  root.go
webapp/: app.py  spotify.py  worker.py
worker/: main.py  worker.py
(+35 files in other folders)
